crates/shipper-core/src/ops/lock/snapshots/shipper_core__ops__lock__edge_case_tests__lock_info_all_fields.snap
---
source: crates/shipper-core/src/ops/lock/mod.rs
expression: info
---
LockInfo {
    pid: 42,
    hostname: "snap-host",
    acquired_at: 2025-06-15T08:30:00Z,
    plan_id: Some(
        "plan-xyz-789",
    ),
}
