crates/shipper-core/src/ops/lock/snapshots/shipper_core__ops__lock__edge_case_tests__lock_state_corrupt.snap
---
source: crates/shipper-core/src/ops/lock/mod.rs
expression: state
---
Corrupt(
    "<<<not json>>>",
)
