crates/shipper-core/src/ops/lock/snapshots/shipper_core__ops__lock__edge_case_tests__lock_state_locked_no_plan.snap
---
source: crates/shipper-core/src/ops/lock/mod.rs
expression: state
---
Locked(
    LockInfo {
        pid: 100,
        hostname: "snap-host",
        acquired_at: 2025-06-15T08:30:00Z,
        plan_id: None,
    },
)
