crates/shipper-core/src/ops/lock/snapshots/shipper_core__ops__lock__edge_case_tests__lock_state_locked_with_plan.snap
---
source: crates/shipper/src/ops/lock/mod.rs
expression: state
---
Locked(
    LockInfo {
        pid: 200,
        hostname: "snap-host",
        acquired_at: 2025-06-15T08:30:00Z,
        plan_id: Some(
            "release-v1.0",
        ),
    },
)
